Commits the changed pages from previous change

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -162,8 +162,8 @@
                             <div itemprop="articleBody" class="content article-body">
                                 <h3 id="who-am-i">Who am I?</h3>
 <p>Hi, I'm Anuj! This is my litte corner of the web.</p>
-<p>I'll be writing about things I find interesting primarily in the realm of computer science, physics and maths.</p>
-<p>At the moment, I'm taking a break from software development work and university to spend time learn things myself, namely:</p>
+<p>I'll be writing about things I find interesting, primarily in the realm of computer science, physics and maths.</p>
+<p>At the moment, I'm taking a break from software development work and university to spend time learn things myself. Namely:</p>
 <ul>
 <li>Distributed Systems</li>
 <li>Operating Systems</li>
@@ -177,7 +177,7 @@
 <li>On Matrix: <a href="matrix:@anuj:chronal.space">@anuj:chronal.space</a> (The link may not work, the &quot;matrix:&quot; URI is a work in progress)</li>
 </ul>
 <h3 id="blog-tech-stack">Blog Tech Stack</h3>
-<p>This blog uses static site generator <a href="https://www.getzola.org">Zola</a> with the <a href="https://github.com/Worble/Zulma">Zulma</a> theme.
+<p>This blog uses the static site generator <a href="https://www.getzola.org">Zola</a> with the <a href="https://github.com/Worble/Zulma">Zulma</a> theme.
 You can get an RSS feed for any of the categories or the tags by clicking on the category or tag and appending <code>rss.xml</code> to the url you get.</p>
 <p>For example: <a href="https://chronal.space/tags/personal/rss.xml">https://chronal.space/tags/personal/rss.xml</a></p>
 <p>You can also get an RSS feed to everything: <a href="https://chronal.space/rss.xml">https://chronal.space/rss.xml</a></p>
