Fixes another grammatical error in the about page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -163,7 +163,7 @@
                                 <h3 id="who-am-i">Who am I?</h3>
 <p>Hi, I'm Anuj! This is my litte corner of the web.</p>
 <p>I'll be writing about things I find interesting, primarily in the realm of computer science, physics and maths.</p>
-<p>At the moment, I'm taking a break from software development work and university to spend time learn things myself. Namely:</p>
+<p>At the moment, I'm taking a break from software development work and university to spend time learning things myself. Namely:</p>
 <ul>
 <li>Distributed Systems</li>
 <li>Operating Systems</li>
